<resources>
    <string name="app_name">Toka</string>
    <string name="hole">Hole</string>
    <string name="par">Par</string>
    <string name="front">Front</string>
    <string name="middle">Middle</string>
    <string name="back">Back</string>
    <string name="hdc">HDC</string>
    <string name="mens">Men\'s</string>
    <string name="ladies">Ladie\'s</string>
    <string name="title">Toka Sticks Golf Club</string>
    <string name="newsletter">Newsletter</string>
    <string name="scorecard">Scorecard</string>
    <string name="tee_times">Tee Times</string>
    <string name="weather">Weather</string>
    <string name="newsletter_link">http://www.tokasticksgolf.com/Newsletter_50dfff95d.html</string>
    <string name="scorecard_link">http://www.tokasticksgolf.com/scorecard.html</string>
    <string name="tee_times_link">http://www.tokasticksgolf.com/Mesa-Arizona-Tee-Times.html</string>
    <string name="weather_link">https://weather.com/weather/today/l/33.42,-111.83</string>
    <string name="facebook">https://www.facebook.com/TokaSticks/?fref=ts</string>
    <string name="instagram">https://www.instagram.com/tokasticks_golfclub/</string>
    <string name="twitter">https://twitter.com/tokasticksgolf</string>
    <string name="contact">Contact Us</string>
    <string name="call_club">Clubhouse</string>
    <string name="call_four_points">Four Points</string>
    <string name="toka_website">Toka Sticks Website</string>
    <string name="four_website">Four Points Website</string>
    <string name="toka_website_link">http://www.tokasticksgolf.com/index.php</string>
    <string name="four_webiste_link">http://www.fourpointsphoenixmesaairport.com/</string>
    <string name="toka_phone">tel:4809889405</string>
    <string name="four_phone">tel:4805792100</string>
    <string name="jump">Jump To Any Hole</string>
    <string name="website">Visit Our Website</string>
    <string name="follow">Follow Us</string>
</resources>
