<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="165dp"
    android:background="#b0b8b9" >

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/front"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:textSize="28dp" />

                <TextView
                    android:id="@+id/front_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/front"
                    android:text="@string/front"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:textSize="35dp" />

                <TextView
                    android:id="@+id/middle_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/middle"
                    android:text="@string/middle"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:textSize="28dp" />

                <TextView
                    android:id="@+id/back_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/back"
                    android:text="@string/back"
                    android:textSize="18dp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>