<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b0b8b9"
    >

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:text="@string/hole"
                android:gravity="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/hole"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:text="18"
                android:gravity="center"
                android:textSize="30sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:text="Par"
                android:gravity="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/par"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:text="3"
                android:gravity="center"
                android:textSize="30sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/front"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="376"
                    android:textSize="28dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/front"
                    android:text="@string/front"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="376"
                    android:textSize="35dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/front"
                    android:text="@string/middle"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="376"
                    android:textSize="28dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/back"
                    android:text="@string/back"
                    android:textSize="18dp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <View android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/tee_1"/>

            <TextView
                android:id="@+id/tee_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="376"
                android:textSize="28dp"
                android:textColor="#00cc44"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>