<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b0b8b9">

    <include layout="@layout/top_nav" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#b0b8b9" >

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            card_view:cardCornerRadius="0dp"
            card_view:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/contact"
                    android:gravity="center"
                    android:textSize="30sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:background="#b0b8b9" >

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            card_view:cardCornerRadius="0dp"
            card_view:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/imageView"
                    android:src="@drawable/contact_image"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:gravity="center">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            card_view:cardCornerRadius="0dp"
            card_view:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginRight="300dp">

                <View
                    android:id="@+id/call_toka"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/phone"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="5dp"/>

                <View
                    android:id="@+id/toka_web"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/website"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginRight="150dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/call_club"
                    android:layout_marginBottom="40dp"/>

                <TextView
                    android:id="@+id/tee_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textSize="12dp"
                    android:text="@string/toka_website" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <View
                    android:id="@+id/call_four"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/phone"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"/>

                <View
                    android:id="@+id/four_web"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/website"
                    android:layout_marginLeft="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginLeft="180dp">

                <TextView
                    android:id="@+id/tee_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="40dp"
                    android:textSize="15dp"
                    android:text="@string/call_four_points" />

                <TextView
                    android:id="@+id/tee_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="12dp"
                    android:text="@string/four_website"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#b0b8b9" >

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            card_view:cardCornerRadius="0dp"
            card_view:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:id="@+id/facebook"
                    android:src="@drawable/facebook"/>

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:id="@+id/twitter"
                    android:src="@drawable/twitter"/>

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:id="@+id/instagram"
                    android:src="@drawable/instagram"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <com.roughike.bottombar.BottomBar
            android:id="@+id/bottomBar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            app:bb_tabXmlResource="@xml/bottombar_tabs"
            android:background="#000000"
            android:layout_gravity="bottom" />

    </LinearLayout>

</LinearLayout>
